syntax = "proto3";

option go_package = "service_c/adapters/service_b";

service PhoneService {
  rpc CheckPhone(CheckPhoneRequest) returns (CheckPhoneResponse);
}

message CheckPhoneRequest {
  string phone = 1;
}

message CheckPhoneResponse {
  bool exists = 1;
}